Fixed last synced time alignment with found x users text

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -8,6 +8,11 @@
   justify-content: space-between;
 }
 
+.inline-space-between .count-title {
+  margin-top: 0.8rem;
+  margin-bottom: 0.8rem;
+}
+
 .inline-span {
   display: flex;
   justify-content: center;
